# assistant

./: .gitignore  .pre-commit-config.yaml  Makefile  com.github.tiencheng.assistant.json  pyproject.toml  python-modules.json  requirements.txt
data/: com.github.tiencheng.assistant.appdata.xml.in  com.github.tiencheng.assistant.desktop.in  com.github.tiencheng.assistant.gschema.xml  meson.build
data/icons/: meson.build
po/: POTFILES
src/: assistant.gresource.xml  assistant.in  main.py  meson.build  window.py
