[tool.poetry]
name = "assistant"
version = "0.1.0"
description = ""
authors = ["Tien-Cheng <tiencheng@protonmail.com>"]
license = "GPL 3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
pygobject = "^3.44.0"

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
isort = "^5.12.0"
pytest = "^7.2.2"
pygobject-stubs = "^2.4.0"
pylint = "^2.17.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
